--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
     <h1 class="title">2023 신년계획</h1>
     <p class="msg">다시 해보자!!</p>
     <div class="row flex-row wrap">
-        <div clalss="bucket img1-t2 center done">코딩 배우기</div>
-        <div clalss="bucket img2 center">코딩 배우기</div>
-        <div clalss="bucket img2 center">엡 만들기</div>
-        <div clalss="bucket img1 center">3천만원 모으기</div>
-        <div clalss="bucket img1 center">유튜브 시작하기</div>
-        <div clalss="bucket img2 center">대출 갚기</div>
+        <div class="bucket img1-t2 center done">코딩 배우기</div>
+        <div class="bucket img2 center">코딩 배우기</div>
+        <div class="bucket img2 center">엡 만들기</div>
+        <div class="bucket img1 center">3천만원 모으기</div>
+        <div class="bucket img1 center">유튜브 시작하기</div>
+        <div class="bucket img2 center">대출 갚기</div>
     </div>
 
 </body>
